relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-43.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@password|my_password_123": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@password|my_password_123": {
      "value": {
        "": {
          "rem": [
            [
              "@password",
              "x",
              0,
              0
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
