relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-44.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@password:remove|my_password_123": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@password:remove|my_password_123": {
      "value": {
        "": {
          "rem": [
            [
              "@password:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
