relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-46.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@password:mask|my_password_123": {
    "type": "string",
    "value": "***************"
  },
  "_meta": {
    "@password:mask|my_password_123": {
      "value": {
        "": {
          "rem": [
            [
              "@password:mask",
              "m",
              0,
              15
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
