relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-49.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@bearer:remove|Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@bearer:remove|Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9": {
      "value": {
        "": {
          "rem": [
            [
              "@bearer:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 43
        }
      }
    }
  }
}
