relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-5.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@email|test@example.com": {
    "type": "string",
    "value": "[email]"
  },
  "_meta": {
    "@email|test@example.com": {
      "value": {
        "": {
          "rem": [
            [
              "@email",
              "s",
              0,
              7
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
